DOC-9 Fixes for DNN theme Added expand/collapse on left hand nav tree.  Also added sticky footer.

--- a/common/themes/dnn/layout.html
+++ b/common/themes/dnn/layout.html
@@ -17,7 +17,8 @@
 
 {% set script_files = script_files + [
     'http://code.jquery.com/jquery-1.11.3.min.js',
-    'http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js'
+    'http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js',
+    '_static/dnn.theme.js'
   ]
 %}
 
