DOC-9 Update theme to add page tracking The right hand nav section contains a list of all document sections.  As the user scrolls through the document, the list will highlight items to provide a visual display of where the user is in the document.

--- a/common/themes/dnn/layout.html
+++ b/common/themes/dnn/layout.html
@@ -79,6 +79,7 @@
 {% if rendersidebar %}
         </div>
         <nav class="article-nav-wrapper">
+            {{ toc }}
             {% block sidebar2 %}{% endblock %}         
         </nav>
     </section>
