DOC-12 Fit and Finish Update theme and main developer index page.  This addresses the new IA and adds in the missing breadcrumbs trail at the top of documents.

--- a/common/themes/dnn/layout.html
+++ b/common/themes/dnn/layout.html
@@ -69,6 +69,7 @@
     {%- block sidebar1 %}{{ bsidebar() }}{% endblock %}
     <section class="doc-wrapper">
         <div class="doc">
+            {% include "breadcrumbs.html" %}
 {% else %}
 <main class="main-body">
     <div class="container-fluid">
