--- a/common/themes/dnn/navbarlinks.html
+++ b/common/themes/dnn/navbarlinks.html
@@ -8,7 +8,7 @@
 			<ul class="nav-sub-level">
 				{%- for child in link[3] %}
                 {% if child[2] %}
-				<li class="nav-node-wrapper"><a class="nav-node" href="{{ pathto(*child[1:2]) }}" >{{ child[0] }}</a></li>
+				<li class="nav-node-wrapper"><a class="nav-node" href="{{ child[1]|replace('~', theme_link_root, 1) }}" >{{ child[0] }}</a></li>
                 {% else %}
                 <li class="nav-node-wrapper"><a class="nav-node" href="{{ child[1] }}" >{{ child[0] }}</a></li>
                 {% endif %}
